# webtronics

./: Dockerfile  Makefile  README.md  docker-compose.yml
sonet/: config.py  main.py
sonet/alembic/: env.py
sonet/alembic/versions/: 1d1a80e35f13_initial.py
sonet/app/: api.py  app.py
sonet/app/api/: depends.py
sonet/app/api/api_v1/: api.py
sonet/app/api/api_v1/endpoints/: login.py  posts.py  reactions.py  users.py
sonet/app/auth/: auth.py
sonet/app/core/: config.py  security.py
sonet/app/crud/: __init__.py  crud_base.py  crud_post.py  crud_reaction.py  crud_user.py
sonet/app/database/: base.py  init_db.py  session.py
sonet/app/database/cruds/: __init__.py  posts.py  reactions.py  users.py
sonet/app/database/models/: __init__.py  post.py  reaction.py  user.py
sonet/app/database/schemas/: __init__.py  post.py  reaction.py  user.py
sonet/app/models/: post.py  reaction.py  user.py
sonet/app/routes/: auth.py  post.py  reactions.py  user.py
sonet/app/schemas/: __init__.py  post.py  reaction.py  token.py  user.py
sonet/poetry/: pyproject.toml
